Fix navigation.